# happy-migrations

./: .gitignore  happy.ini  pyproject.toml  readme.md
migrations/: 0001_jedi_sith_rogue_tables.py  0002_separatist_table.py  0003_the_quick_brown_fox_jumps_over_the_lazy_dog.py
src/happy_migrations/: __init__.py  __main__.py  _data_classes.py  _templates.py  _utils.py  constants.py  main.py  parse_ini.py  sqlite_backend.py  utils.py
tests/: test_sqlite_backend.py  test_true.py
tests/migrations/: 0000_jedi_sith_rogue_tables.py  0001_separatist_table.py
